--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,12 @@
   "dependencies": {
     "HTML5-Desktop-Notifications": "https://github.com/ttsvetko/HTML5-Desktop-Notifications.git",
     "angular": "~1.3.5"
+  },
+  "devDependencies": {
+    "jquery": "~1.11.0",
+    "angular-mocks": "~1.2.x"
+  },
+  "resolutions": {
+    "angular": "~1.3.5"
   }
 }
