--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -3,21 +3,27 @@
   "camelcase": true,
   "curly": true,
   "eqeqeq": true,
+  "forin": true,
+  "freeze": true,
   "immed": true,
   "indent": 4,
   "latedef": true,
   "newcap": true,
   "noarg": true,
+  "nocomma": false,
+  "noempty": true,
+  "nonbsp": true,
+  "nonew": true,
+  "quotmark": "single",
+  "singleGroups": true,
   "undef": true,
   "unused": true,
-  "quotmark": "single",
-  "evil": true,
-  "sub": true,
-  "boss": false,
-  "eqnull": true,
-  "browser": true,
-  "noempty": true,
-  "trailing": true,
+  "maxcomplexity": 10,
+  "maxdepth": 5,
+  "maxerr": 100,
+  "maxlen": 250,
+  "maxparams": 3,
+  "maxstatements": 50,
   "globalstrict": true,
   "globals": {
     "angular": true,
