--- a/.jshintrc
+++ b/.jshintrc
@@ -22,15 +22,8 @@
   "maxdepth": 5,
   "maxerr": 100,
   "maxlen": 250,
-  "maxparams": 3,
+  "maxparams": 5,
   "maxstatements": 50,
   "globalstrict": true,
-  "globals": {
-    "window": true,
-    "setTimeout": true,
-    "clearTimeout": true,
-    "angular": true,
-    "notify": true,
-    "module": true
-  }
+  "browser": true
 }
