--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -1,36 +1,7 @@
 {
-  "bitwise": true,
-  "camelcase": true,
-  "curly": true,
-  "eqeqeq": true,
-  "forin": true,
-  "freeze": true,
-  "immed": true,
-  "indent": 4,
-  "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "nocomma": false,
-  "noempty": true,
-  "nonbsp": true,
-  "nonew": true,
-  "quotmark": "single",
-  "singleGroups": false,
-  "undef": true,
-  "unused": true,
-  "maxcomplexity": 10,
-  "maxdepth": 5,
-  "maxerr": 100,
-  "maxlen": 250,
-  "maxparams": 5,
-  "maxstatements": 50,
-  "globalstrict": true,
-  "browser": true,
+  "extends": "../.jshintrc",
   "mocha": true,
   "globals": {
-    "angular": true,
-    "notify": true,
-    "module": true,
     "assert": true,
     "inject": true
   }
