update grunt and jslint options

--- a/.jshintrc
+++ b/.jshintrc
@@ -28,8 +28,6 @@
   "browser": true,
   "globals": {
     "angular": true,
-    "notify": true,
-    "module": true,
-    "require": true
+    "notify": true
   }
 }
