--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,6 @@
     "max-nested-callbacks": 0,
     "one-var": 0,
     "padded-blocks": 0,
-    "quote-props": 0,
     "sort-vars": 0,
     "space-before-blocks": 0,
     "space-in-brackets": 0,
@@ -32,15 +31,51 @@
     "no-undefined": 0,
     "func-names": 0,
     "consistent-this": 0,
-
-    "valid-jsdoc": [1, {
-      "requireReturn": false,
-      "prefer": {
-        "return": "returns"
+    "valid-jsdoc": [
+      1,
+      {
+        "requireReturn": false,
+        "prefer": {
+          "return": "returns"
+        }
       }
-    }],
-
-    "no-comma-dangle": 2,
+    ],
+    "quote-props": [
+      2,
+      "as-needed"
+    ],
+    "constructor-super": 2,
+    "no-this-before-super": 2,
+    "no-unexpected-multiline": 2,
+    "array-bracket-spacing": [
+      2,
+      "never"
+    ],
+    "arrow-parens": 2,
+    "arrow-spacing": [
+      2,
+      {
+        "before": true,
+        "after": true
+      }
+    ],
+    "callback-return": 2,
+    "id-length": [
+      2,
+      {
+        "min": 2
+      }
+    ],
+    "no-class-assign": 2,
+    "no-const-assign": 2,
+    "no-implicit-coercion": 2,
+    "no-invalid-this": 2,
+    "no-useless-call": 2,
+    "require-yield": 2,
+    "comma-dangle": [
+      2,
+      "never"
+    ],
     "no-cond-assign": 2,
     "no-console": 2,
     "no-constant-condition": 2,
@@ -48,7 +83,7 @@
     "no-debugger": 2,
     "no-dupe-keys": 2,
     "no-empty": 2,
-    "no-empty-class": 2,
+    "no-empty-character-class": 2,
     "no-ex-assign": 2,
     "no-extra-boolean-cast": 2,
     "no-extra-semi": 2,
@@ -59,7 +94,6 @@
     "no-negated-in-lhs": 2,
     "no-obj-calls": 2,
     "no-regex-spaces": 2,
-    "no-reserved-keys": 2,
     "no-sparse-arrays": 2,
     "no-unreachable": 2,
     "use-isnan": 2,
@@ -104,9 +138,10 @@
     "radix": 2,
     "wrap-iife": 2,
     "yoda": 2,
-    "global-strict": 2,
-    "no-extra-strict": 2,
-    "strict": 2,
+    "strict": [
+      2,
+      "function"
+    ],
     "no-catch-shadow": 2,
     "no-delete-var": 2,
     "no-label-var": 2,
@@ -125,11 +160,17 @@
     "no-sync": 2,
     "brace-style": 2,
     "camelcase": 2,
-    "comma-spacing": [2, {
-      "before": false,
-      "after": true
-    }],
-    "comma-style": [2, "last"],
+    "comma-spacing": [
+      2,
+      {
+        "before": false,
+        "after": true
+      }
+    ],
+    "comma-style": [
+      2,
+      "last"
+    ],
     "eol-last": 2,
     "key-spacing": 2,
     "new-cap": 2,
@@ -139,13 +180,18 @@
     "no-mixed-spaces-and-tabs": 2,
     "no-nested-ternary": 2,
     "no-new-object": 2,
-    "no-space-before-semi": 2,
+    "semi-spacing": [
+      2,
+      {
+        "before": false,
+        "after": true
+      }
+    ],
     "no-spaced-func": 2,
     "no-ternary": 2,
     "no-trailing-spaces": 2,
     "no-multiple-empty-lines": 2,
     "no-underscore-dangle": 2,
-    "no-wrap-func": 2,
     "quotes": [
       2,
       "single",
@@ -155,9 +201,20 @@
     "space-after-keywords": 2,
     "space-infix-ops": 2,
     "space-return-throw-case": 2,
-    "spaced-line-comment": [2, "never"],
+    "spaced-comment": [
+      2,
+      "never",
+      {
+        "exceptions": [
+          "/*"
+        ]
+      }
+    ],
     "wrap-regex": 2,
-    "max-params": [2, 6],
+    "max-params": [
+      2,
+      6
+    ],
     "no-bitwise": 2
   }
 }
