--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: node_js
-node_js:
-  - "0.10"
-before_script:
-  - npm install -g bower@1.3.12
-  - bower install
 sudo: false
+node_js:
+  - "node"
