--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-web-notification",
-  "version": "0.0.35",
+  "version": "0.0.36",
   "authors": [
     "Sagie Gur-Ari <sagiegurari@gmail.com>"
   ],
@@ -22,14 +22,14 @@
     "target"
   ],
   "dependencies": {
-    "HTML5-Desktop-Notifications2": "~1.0.1",
-    "angular": "~1.3.5"
+    "HTML5-Desktop-Notifications2": "1.0.1",
+    "angular": "1.4.7"
   },
   "devDependencies": {
-    "jquery": "~1.11.0",
-    "angular-mocks": "~1.2.x"
+    "jquery": "~2",
+    "angular-mocks": "1.4.7"
   },
   "resolutions": {
-    "angular": "~1.3.5"
+    "angular": "1.4.7"
   }
 }
