--- a/.jshintrc
+++ b/.jshintrc
@@ -1,33 +1,24 @@
 {
   "bitwise": true,
-  "camelcase": true,
   "curly": true,
   "eqeqeq": true,
   "forin": true,
   "freeze": true,
-  "immed": true,
-  "indent": 4,
+  "futurehostile": true,
   "latedef": true,
-  "newcap": true,
-  "noarg": true,
-  "nocomma": false,
-  "noempty": true,
-  "nonbsp": true,
-  "nonew": true,
-  "quotmark": "single",
-  "singleGroups": false,
-  "undef": true,
-  "unused": true,
   "maxcomplexity": 10,
   "maxdepth": 5,
   "maxerr": 100,
   "maxlen": 250,
   "maxparams": 5,
   "maxstatements": 50,
-  "globalstrict": true,
-  "browser": true,
-  "globals": {
-    "angular": true,
-    "notify": true
-  }
+  "noarg": true,
+  "nocomma": false,
+  "nonbsp": true,
+  "nonew": true,
+  "singleGroups": false,
+  "strict": true,
+  "undef": true,
+  "unused": true,
+  "browser": true
 }
