--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,12 @@ engines:
     enabled: true
   fixme:
     enabled: true
+  duplication:
+    enabled: true
+    config:
+      languages:
+        javascript:
+          mass_threshold: 100
 ratings:
   paths:
     - angular-web-notification.js
