--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -17,6 +17,7 @@ exclude_paths:
   - docs/*
   - Gruntfile.js
   - karma.conf.js
+  - .eslintrc.js
   - .editorconfig
   - .codeclimate.yml
   - LICENSE
