--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -9,8 +9,8 @@ ratings:
 exclude_paths:
   - test/**/*
   - test/*
-  - build/**/*
-  - build/*
+  - project/**/*
+  - project/*
   - example/**/*
   - example/*
   - docs/**/*
@@ -24,8 +24,6 @@ exclude_paths:
   - README.md
   - bower.json
   - package.json
-  - eslintrc-common.json
-  - jshintrc-common.json
   - .*.json
   - .*.yml
   - .*rc
