--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 sudo: false
 node_js:
   - "node"
+before_install:
+  - npm install -g npm
 before_script:
   - npm install -g bower
   - bower install
