--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,6 +1,9 @@
 engines:
   eslint:
     enabled: true
+    channel: "eslint-2"
+    config:
+      config: .eslintrc.js
   fixme:
     enabled: true
 ratings:
