markdown lint changes

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "grunt-jslint": "latest",
     "grunt-jsonlint": "latest",
     "grunt-karma": "latest",
+    "grunt-markdownlint": "latest",
     "husky": "latest",
     "karma": "latest",
     "karma-cli": "latest",
@@ -58,7 +59,6 @@
     "load-grunt-configs": "latest",
     "load-grunt-tasks": "latest",
     "lolex": "latest",
-    "markdownlint": "latest",
     "mocha": "latest",
     "phantomjs-prebuilt": "latest",
     "sinon": "latest",
