--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chai": "latest",
     "grunt": "latest",
     "grunt-cli": "latest",
+    "grunt-concurrent": "latest",
     "grunt-contrib-clean": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-coveralls": "latest",
@@ -50,6 +51,7 @@
     "grunt-karma": "latest",
     "grunt-markdownlint": "latest",
     "husky": "latest",
+    "jit-grunt": "latest",
     "karma": "latest",
     "karma-cli": "latest",
     "karma-coverage": "latest",
@@ -57,7 +59,6 @@
     "karma-phantomjs-launcher": "latest",
     "karma-sinon-chai": "latest",
     "load-grunt-configs": "latest",
-    "load-grunt-tasks": "latest",
     "lolex": "latest",
     "mocha": "latest",
     "phantomjs-prebuilt": "latest",
