--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-web-notification",
-  "version": "0.0.81",
+  "version": "0.0.82",
   "description": "AngularJS service for displaying web notifications.",
   "authors": [
     "Sagie Gur-Ari <sagiegurari@gmail.com>"
@@ -16,6 +16,8 @@
   "ignore": [
     "node_modules",
     "bower_components",
+	".github",
+	"project",
     "test",
     "tests",
     "example",
