--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-web-notification",
-  "version": "0.0.91",
+  "version": "1.0.0",
   "description": "AngularJS service for displaying web notifications.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -34,7 +34,7 @@
     "build": "grunt build",
     "jstest": "grunt jstest",
     "prepush": "npm run build",
-    "synclibs": "npm install && npm update"
+    "grunt": "grunt"
   },
   "devDependencies": {
     "chai": "latest",
