--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-web-notification",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "AngularJS service for displaying web notifications.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -56,6 +56,7 @@
     "grunt-markdownlint": "latest",
     "husky": "latest",
     "jit-grunt": "latest",
+    "js-project-commons": "latest",
     "karma": "latest",
     "karma-cli": "latest",
     "karma-coverage": "latest",
