--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-web-notification",
-  "version": "1.0.26",
+  "version": "1.1.27",
   "description": "AngularJS service for displaying web notifications.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -37,6 +37,9 @@
     "prepush": "npm run build",
     "postpublish": "grunt post-publish",
     "grunt": "grunt"
+  },
+  "dependencies": {
+    "simple-web-notification": "latest"
   },
   "devDependencies": {
     "chai": "latest",
